@@ -1731,7 +1731,10 @@ proc gdb_compile {source dest type options} {
                     lappend options "additional_flags=-L${outdir}"
                 } elseif { [istarget "mips-sgi-irix*"] } {
                     lappend options "additional_flags=-rpath ${outdir}"
-                }
+                } elseif { ([istarget "*-*-mingw*"]
+			    || [istarget *-*-cygwin*]) } {
+		    lappend new_options "additional_flags=-Wl,--enable-auto-import"
+		} 
             }
 	} elseif { $opt == "shlib_load" } {
 	    if { ([istarget "*-*-mingw*"]
